--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,20 @@
 * {
   box-sizing: border-box;
 }
+body {
+  color: #eee;
+  background-color: #111;
+}
+.favorite-wrapper {
+  color: #111;
+  background-color: #eee;
+  border-radius: 50px;
+  padding: 25px;
+  margin: 25px;
+}
+.profile-image img {
+  width: 160px;
+}
+.online {
+  background-color: green;
+}
